updated some auth corrections